<resources>
    <string name="app_name">NetSleep</string>
    <string name="action_settings">Settings</string>
    <string name="wifi">Turn off WIFI</string>
    <string name="bt">Turn off Bluetooth</string>
    <string name="mobileData">Turn off Mobile data (LTE or 3G)</string>
    <string name="whenScreenLocked">When screen locked</string>
    <string name="disableAll">Disable all</string>
    <string name="showNotification">Show notification at status bar</string>
    <string name="batterySaverString">Enable internal battery saver</string>
    <string name="serviceEnabledNotif">NetSleep service is active</string>
    <string name="thereIsNoMobileDataFeature">Your device has no mobile data feature.</string>
    <string name="mobileDataFeatureForLollipop">We need root permission for this feature at Android 5.0 and above.</string>
</resources>