<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.emre.netsleep.MainActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </RelativeLayout>

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/wifiSwitch"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relativeLayout"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="102dp"
        android:text="@string/wifi"
        android:textColor="@color/colorPrimary" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/btSwitch"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relativeLayout"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="147dp"
        android:text="@string/bt"
        android:textColor="@color/colorPrimary" />


    <android.support.v7.widget.SwitchCompat
        android:id="@+id/mobileDataSwitch"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relativeLayout"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="194dp"
        android:text="@string/mobileData"
        android:textColor="@color/colorPrimary" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/showNotificationSwitch"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relativeLayout"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="241dp"
        android:text="@string/showNotification"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relativeLayout"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="25dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/whenScreenLocked"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp" />

    <Button
        android:id="@+id/disable_all"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:layout_below="@+id/mobileDataSwitch"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/disableAll"
        android:textColor="#FFF"
        android:theme="@style/ButtonTheme" />

</RelativeLayout>
